Fix a crash with DefaultSearchProviderEnabled policy set to false

With the policy set to false, the browser used to crash when:
- The user enters '?' as the first character in the omnibar
- The user hits CTRL+K or CTRL+E to start a default search

Bug: 869384
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I7b98bd7a745a8e66ffd22b1f972a5110e89a568c
Reviewed-on: https://chromium-review.googlesource.com/1162421
Reviewed-by: Tommy Li <tommycli@chromium.org>
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581219}
Former-commit-id: e98a790d5245feba119cf098ee4cbe094daf2efe