ios/chrome/browser/ui/omnibox/chrome_omnibox_client_ios.h
@@ -38,6 +38,7 @@ class ChromeOmniboxClientIOS : public OmniboxClient {
   bool IsSearchResultsPage() const override;
   bool IsNewTabPage(const GURL& url) const override;
   bool IsHomePage(const GURL& url) const override;
+  bool IsDefaultSearchProviderEnabled() const override;
   const SessionID& GetSessionID() const override;
   bookmarks::BookmarkModel* GetBookmarkModel() override;
   TemplateURLService* GetTemplateURLService() override;
